--- a/test_site/Gemfile
+++ b/test_site/Gemfile
@@ -1,6 +1,6 @@
 source 'https://rubygems.org'
 
-gem 'jekyll', '3.1.2'
+gem 'jekyll', '~> 3.8.6'
 gem 'json'
 gem 'stringex'
-gem 'rmagick', '~>2.16.0'
+gem 'rmagick', '~>4.0.0'
