--- a/test_site/_config.yml
+++ b/test_site/_config.yml
@@ -20,5 +20,11 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://example.com" # the base hostname & protocol for your site
 
+collections:
+  test_collection:
+    output: true
+  another_collection:
+    output: true
+
 # Build settings
 markdown: kramdown
